# pygo-plugin

./: .gitignore  README.md  go.mod  go.sum  setup.py
.github/workflows/: build_and_test.yml
go_plugin/: client.go  dummy.go
pygo_plugin/: client.py  plugin.py  server.py  utils.py
pygo_plugin/_examples/kv/: main.py
pygo_plugin/_examples/kv/kv_plugin_cpp/: CMakeLists.txt  kv.grpc.pb.cc  kv.grpc.pb.h  kv.pb.cc  kv.pb.h  kv_plugin.cc
pygo_plugin/_examples/kv/shared/: kv_plugin.py
pygo_plugin/proto/: VERSION.go-plugin  grpc_broker_pb2_grpc.py  grpc_controller_pb2.py  grpc_stdio_pb2_grpc.py
src/pygo_plugin/: __init__.py
src/pygo_plugin/_examples/cmake/: common.cmake
src/pygo_plugin/_examples/kv/: .gitignore  README.md
src/pygo_plugin/_examples/kv/kv_plugin_go/: kv_plugin.go
src/pygo_plugin/_examples/kv/kv_plugin_py/: kv_plugin.py
src/pygo_plugin/_examples/kv/shared/: kv.proto  kv_pb2.py  kv_pb2_grpc.py
src/pygo_plugin/_goplugin/: README.txt
src/pygo_plugin/proto/: grpc_broker_pb2.py  grpc_controller_pb2_grpc.py  grpc_stdio_pb2.py
tests/: test_plugin.py  test_utils.py
tests/calc/: calc_plugin.py  plugin.proto  plugin_pb2.py  plugin_pb2_grpc.py
